change font size to prevent zoom on mobile use

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ input {
   color: white;
   cursor: pointer;
 
-  font-size: 0.9rem;
+  font-size: 1rem;
 
   outline: none;
 }
@@ -164,7 +164,7 @@ input::placeholder {
 
   font-family: "Handlee", cursive;
   font-weight: 600;
-  font-size: 0.7rem;
+  font-size: 1rem;
 
   cursor: pointer;
 }
@@ -202,7 +202,7 @@ input::placeholder {
 }
 
 .todo-name {
-  font-size: 0.8rem;
+  font-size: 1rem;
   color: #f9fbfc;
 
   align-self: center;
@@ -273,19 +273,19 @@ input::placeholder {
 @media screen and (max-width: 950px) {
   input {
     flex: 3;
-    font-size: 0.85rem;
+    font-size: 1rem;
   }
 
   .add-btn {
     flex: 0.5;
 
-    font-size: 0.65rem;
+    font-size: 1rem;
   }
 }
 
 @media screen and (max-width: 600px) {
   input {
-    font-size: 0.7rem;
+    font-size: 1rem;
     flex: 2.5;
   }
 
@@ -295,7 +295,7 @@ input::placeholder {
   }
 
   .todo-name {
-    font-size: 0.7rem;
+    font-size: 1rem;
   }
 
   h1 {
@@ -314,17 +314,18 @@ input::placeholder {
 
 @media screen and (max-width: 400px) {
   input {
-    font-size: 0.62rem;
+    font-size: 1rem;
     flex: 2.5;
   }
 
   .add-btn {
     flex: 0.55;
-    font-size: 0.5rem;
+    font-size: 0.8rem;
+    font-weight: bold;
   }
 
   .todo-name {
-    font-size: 0.6rem;
+    font-size: 1rem;
   }
 
   h1 {
@@ -339,17 +340,17 @@ input::placeholder {
 
 @media screen and (max-width: 350px) {
   input {
-    font-size: 0.52rem;
+    font-size: 1rem;
     flex: 2;
   }
 
   .add-btn {
     flex: 0.4;
-    font-size: 0.4rem;
+    font-size: 0.8rem;
   }
 
   .todo-name {
-    font-size: 0.6rem;
+    font-size: 1rem;
   }
 
   h1 {
